--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -18,6 +18,7 @@
             android:id="@+id/list_task"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:tasks="@{tasksVm.tasks}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
